--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.1.4",
     "react-slick": "0.23.1",
     "redux": "latest",
+    "redux-thunk": "2.3.0",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {},
